# propr

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  OLDCMakeLists.txt  README.md  configure
.singularity/: singularity-r.def  singularity-r.sif
R/: 1-propr.R  10-nvtx-shim.R  1a-propr-backend.R  2-propd.R  2a-propd-backend.R  2b-propd-frontend.R  2c-propd-experimental.R  3-shared-getAdjacency.R  3-shared-getCutoff.R  3-shared-getMatrix.R  3-shared-getRatios.R  3-shared-getResults.R  3-shared-graflex.R  3-shared-updateCutoffs.R  3-shared-updatePermutes.R  3-shared-zero.R  4-aldex2propr.R  5-selectRatios.R  5-selectReference.R  9-global.R  RcppExports.R
bench/: CMakeLists.txt  Makefile  bench.R
ci/: run-tests.R
cmake/: FindCatch2.cmake  FindR.cmake  FindRLibraryPath.R  FindTestthat.cmake
data-raw/data/: all_counts.csv  samplesheet.csv
inst/include/propr/: context.h  test_utils.hpp  utils.hpp
inst/include/propr/data/: types.h
inst/include/propr/interface/: backend.hpp  comparsison.hpp  ctzRcpp.hpp  device_selector.hpp  graflex.hpp  lr2propr.hpp  lrm.hpp  lrv.hpp  omega.hpp
inst/include/propr/internal/device/cuda/thread/: mem_ops.cuh
inst/include/propr/kernels/cpu/dispatch/: backend.hpp  comparison.hpp  ctzRcpp.hpp  graflex.hpp  lr2propr.hpp  lrm.hpp  lrv.hpp  omega.hpp
inst/include/propr/kernels/cuda/detail/: backend.cuh  ctz.cuh  graflex.cuh  lr2propr.cuh  lrm.cuh  lrv.cuh  omega.cuh  utils.hpp
inst/include/propr/kernels/cuda/detail/cutlass/omega/: config.cuh  kernel.cuh
inst/include/propr/kernels/cuda/detail/cutlass/omega/atoms/: harmonic_atom_sm80.cuh
inst/include/propr/kernels/cuda/detail/cutlass/omega/thread/: statistics.cuh
inst/include/propr/kernels/cuda/detail/deprecated/cutlass/omega/: config.cuh  kernel.cuh
inst/include/propr/kernels/cuda/detail/deprecated/cutlass/omega/traits/: harmonic_traits_sm80.cuh
inst/include/propr/kernels/cuda/detail/experimental/cutlass/omega/atoms/: harmonic_atom_sm80.cuh
inst/include/propr/kernels/cuda/dispatch/: backend.cuh  comparison.cuh  ctzRcpp.cuh  graflex.cuh  lr2propr.cuh  lrm.cuh  lrv.cuh  omega.cuh
inst/include/propr/kernels/cuda/traits/: backend.cuh  common.cuh  ctz.cuh  graflex.cuh  lrm.cuh  lrv.cuh  omega.cuh
inst/include/propr/utils/: constants.h  cuda_checks.h  cuda_helpers.cuh  cuda_profiler.cuh  host_exclusive_profiler.hpp  host_profiler.hpp  preprocessor.cuh  rcpp_checks.h  rcpp_cuda.cuh  rcpp_helpers.h
old_vignettes/: e_differential.Rmd
scripts/git/: pre-push
src/: CMakeLists.txt  Makevars  RcppExports.cpp  backend.cpp  comparison.cpp  ctzRcpp.cpp  cuda_profiler.cpp  graflex.cpp  host_exclusive_profiler.cpp  host_profiler.cpp  lr2propr.cpp  lrm.cpp  lrv.cpp  omega.cpp
src/core/dispatch/: device_selector.cpp
src/core/dispatch/cpu/: backend.cpp  comparison.cpp  ctzRcpp.cpp  graflex.cpp  lr2propr.cpp  lrm.cpp  lrv.cpp  omega.cpp
src/core/dispatch/cuda/: backend.cpp  comparison.cpp  ctzRcpp.cpp  graflex.cpp  lr2propr.cpp  lrm.cpp  lrv.cpp  omega.cpp
src/core/interface/: backend.cpp  comparison.cpp  ctzRcpp.cpp  graflex.cpp  lr2propr.cpp  lrm.cpp  lrv.cpp  omega.cpp
src/core/kernels/cuda/: lrm.cu  lrv.cu  omega.cu-------old
src/cpp_tests/: CMakeLists.txt  test_lrm.cu  test_lrv.cu  test_omega.cu
src/dispatch/: CMakeLists.txt  device_selector.cpp
src/dispatch/cpu/: CMakeLists.txt  backend.cpp  comparison.cpp  ctzRcpp.cpp  graflex.cpp  lr2propr.cpp  lrm.cpp  lrv.cpp  omega.cpp
src/dispatch/cuda/: CMakeLists.txt  backend.cpp  backend.cu  comparison.cu  ctzRcpp.cpp  ctzRcpp.cu  graflex.cpp  graflex.cu  lr2propr.cpp  lr2propr.cu  lrm.cpp  lrm.cu  lrv.cpp  lrv.cu  omega.cpp  omega.cu
src/include/: context.h
src/include/interface/: backend.hpp  comparsison.hpp  ctzRcpp.hpp  graflex.hpp  lr2propr.hpp  lrm.hpp  lrv.hpp  omega.hpp
src/include/kernels/cpu/dispatch/: backend.hpp  comparison.hpp  ctzRcpp.hpp  graflex.hpp  lr2propr.hpp  lrm.hpp  lrv.hpp
src/include/kernels/cuda/detail/: lrm.cuh  lrv.cuh  omega.cuh
src/include/kernels/cuda/dispatch/: backend.cuh  ctzRcpp.cuh  graflex.cuh  lr2propr.cuh  lrm.cuh  lrv.cuh  omega.cuh
src/interface/: CMakeLists.txt  backend.cpp  comparison.cpp  graflex.cpp  lr2propr.cpp  omega.cpp
src/kernels/: CMakeLists.txt
src/kernels/cuda/: CMakeLists.txt  lrm.cu  lrv.cu
tests/cpp_test/: test_lrm.cpp  test_lrv.cpp  test_main.cpp
tests/cpp_tests/: CMakeLists.txt  test_lrv.cpp  test_main.cpp  test_main.cu  test_omega.cpp  test_utils.hpp
tests/tests-gpu/: backend.R  test-PROPR-clr-alr-vlr.R
tests/testthat/: test-GET-getMatrix.R  test-GRAFLEX.R  test-PROPD-lrm-lrv.R  test-PROPD-theta.R  test-PROPD-weight.R  test-PROPR-backend-gpu.R  test-PROPR-clr-alr-vlr.R  test-RCPP-count.R  test-RCPP-ctzRcpp.R  test-SHARED-getAdjacency-propd.R  test-SHARED-getAdjacency-propr.R  test-SHARED-getCutoff-propr.R  test-SHARED-lrv.R  test-SHARED-updateCutoffs-propd.R  test-SHARED-updateCutoffs-propr.R  test-SHARED-updatepermutes.R
